--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
   background-color: #dfdfd0;
 }
-#title {
+#title,
+#secondTitle {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,11 +12,12 @@ body {
   font-weight: 700;
   color: rgb(227, 42, 67);
   gap: 15px;
-  margin: 100px auto;
+  margin: 120px auto 30px;
   text-align: center;
 }
 
-#inputText {
+#inputText,
+#inputSecondText {
   width: 30em;
   display: flex;
   align-items: center;
@@ -25,11 +27,11 @@ body {
   gap: 15px;
   margin: 20px auto;
   text-align: center;
-  text-transform: lowercase;
   cursor: pointer;
 }
 
-#myDiv {
+#firstDiv,
+#secondDiv {
   width: 38em;
   height: 5em;
   background-color: rgb(227, 42, 67);
@@ -44,5 +46,5 @@ input[type="text"] {
   padding: 22px 0;
   border-radius: 50px;
   color: rgb(227, 42, 67);
-  font-weight: 100;
+  font-weight: 400;
 }
